<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">学习成绩记录器</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_science">ScienceActivity</string>
    <string name="title_activity_add_grade">AddGradeActivity</string>
    <string name="chinese">语文</string>
    <string name="math">数学</string>
    <string name="english">英语</string>
    <string name="politics">政治</string>
    <string name="history">历史</string>
    <string name="geography">地理</string>
    <string name="physical">物理</string>
    <string name="chemistry">化学</string>
    <string name="biology">生物</string>
    <string name="studentname">学生姓名</string>
    <string name="inputstudentname">请输入学生姓名</string>
    <string name="studentnamestrict">学生姓名最多12个字符</string>
    <string name="numberpassword">账号密码</string>
    <string name="numberpasswordinput">请输入账号密码</string>
    <string name="numberpasswordstrict">密码最多有12个字符</string>
    <string name="passwordreput">重新输入密码</string>
    <string name="wenke">文科</string>
    <string name="like">理科</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="registertopic">没有账号？ 注册</string>
    <string name="title_activity_add_science">AddScienceActivity</string>
    <string name="title_activity_show">ShowActivity</string>

</resources>
